# wifi-security-esp32

./: LICENSE  README.md
attack-simulator/: .cproject  .project  README.md  sdkconfig
attack-simulator/main/: CMakeLists.txt  deauth_attack.c  deauth_attack.h  evil_twin.c  evil_twin.h  hidden_network.c  hidden_network.h  main.c  menu_selection.c  menu_selection.h  open_network.c  open_network.h  unothorized_channel.c  unothorized_channel.h
docs/: index.md
wifi-analyzer/: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
wifi-analyzer/main/: CMakeLists.txt  analyze_csv.py  app_status.c  app_status.h  buzzer.c  buzzer.h  csv_firebase_uploader.c  csv_firebase_uploader.h  debug_original.csv  debug_original.html  http_server.c  http_server.h  i2c-lcd.c  i2c-lcd.h  led_manager.c  led_manager.h  main.c  networks_status.c  networks_status.h  packet_capture.c  packet_capture.h  packets_ch1.csv  results_analyzer.c  results_analyzer.h  screen_printer.c  screen_printer.h  storage.c  storage.h  telegram_sender.c  telegram_sender.h  utils.c  utils.h  whatsapp_sender.c  whatsapp_sender.h  wifi_connect.c  wifi_connect.h  wifi_init.c  wifi_init.h  wifi_scan.c  wifi_scan.h
